--- a/.travis.yml
+++ b/.travis.yml
@@ -11,11 +11,11 @@ cache:
   - "~/.m2/repository"
 
 before_script:
-  - bash ./utils/build_run_xatkit.sh
+  - bash ./utils/build_start_xatkit.sh
 
 script:
 
 after_success:
 
 notifications:
-  email: no    
+  email: no
