--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,7 @@ language: java
 jdk: oraclejdk8
 
 env:
-  - XATKIT-DEV=$TRAVIS_BUILD_DIR/xatkit
-  - XATKIT=$TRAVIS_BUILD_DIR/xatkit/build/bin
+  - XATKIT_DEV=$TRAVIS_BUILD_DIR/xatkit XATKIT=$TRAVIS_BUILD_DIR/xatkit/build/bin
 cache:
   directories:
   - "~/.m2/repository"
