--- a/.travis.yml
+++ b/.travis.yml
@@ -4,17 +4,21 @@ language: java
 jdk: oraclejdk8
 
 env:
-  - XATKIT_DEV=$TRAVIS_BUILD_DIR XATKIT=$TRAVIS_BUILD_DIR/build/bin
+  - XATKIT_DEV=$TRAVIS_BUILD_DIR XATKIT=$TRAVIS_BUILD_DIR/build
 cache:
   directories:
     - "~/.m2/repository"
 before_install:
-  -  nvm install node # "node" is an alias for the latest version. we may need to install a specific version
-  - node --version
+  - nvm install node # "node" is an alias for the latest version. we may need to install a specific version
+  - travis_wait bash .utils/build_xatkit.sh
 before_script:
-  - bash .utils/build_start_xatkit.sh
+  - bash .utils/start_xatkit.sh
+  - cd tests/greetings
+  - npm install
+  - npm test
 
 script:
+  è
 
 after_success:
 
