--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ env:
   - XATKIT_DEV=$TRAVIS_BUILD_DIR XATKIT=$TRAVIS_BUILD_DIR/build
 cache:
   directories:
-    - "~/.m2/repository"
+    - "$HOME/.m2"
 before_install:
   - nvm install node # "node" is an alias for the latest version. we may need to install a specific version
   - travis_wait 30 bash .utils/build_xatkit.sh
@@ -16,12 +16,8 @@ before_script:
   - cd tests/greetings
   - npm install
   - sleep 15
-
-
 script:
   - npm test
-
-after_success:
 
 notifications:
   email: no
